<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_main"
                android:textSize="36dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/header_background"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <Button
                    android:id="@+id/button_large_match"
                    android:layout_width="300dp"
                    android:layout_height="79dp"
                    android:text="@string/type_large"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_menu_button"
            />

            <Button
                    android:id="@+id/button_medium_match"
                    android:layout_width="300dp"
                    android:layout_height="75dp"
                    android:text="@string/type_medium"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_menu_button"
            />

            <Button
                    android:id="@+id/button_short_match"
                    android:layout_width="300dp"
                    android:layout_height="75dp"
                    android:text="@string/type_short"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_menu_button"
            />

            <Button
                    android:id="@+id/button_heating_match"
                    android:layout_width="300dp"
                    android:layout_height="75dp"
                    android:text="@string/type_heating"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_menu_button"
            />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>